<resources>
    <string name="app_name">InventoryApp2</string>
    <string name="empty_view_text">Get started by adding a product!</string>
    <string name="action_delete_all_products">Delete all products?</string>
    <string name="delete_all_dialog_msg">Are you sure you want to delete all products?</string>
    <string name="add_product">Add New Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="supplier_unknown">Unknown</string>
    <string name="supplier_amazon">Amazon</string>
    <string name="supplier_flipkart">Flipkart</string>
    <string name="supplier_snapdeal">Snapdeal</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="product_view">Product Details</string>
    <string name="delete_dialog_msg">Delete this Product?</string>
    <string name="quantity_change_msg">Quantity changed</string>
    <string name="quantity_finish_msg">No products left</string>
    <string name="product_name">Product Name</string>
    <string name="products">Headphone, Mobile, Books...</string>
    <string name="product_price">Price</string>
    <string name="price">10, 20, 30...</string>
    <string name="product_price_currency">$</string>
    <string name="product_quantity">Quantity</string>
    <string name="quantity">1, 2, 3...</string>
    <string name="product_supplier_name">Supplier Name</string>
    <string name="product_supplier_phone_number">Supplier Phone Number</string>
    <string name="phone_number">1234567890</string>
    <string name="action_save">Save</string>
    <string name="empty_list">Save</string>
    <string name="insert_failed">Error with saving product</string>
    <string name="insert_successful">Product saved successfully</string>
    <string name="update_failed">Error with updating product</string>
    <string name="update_successful">Product updated successfully</string>
    <string name="deleted_all_products_message">All products deleted</string>
    <string name="cancel">Cancel</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="delete_product_failed">Error with deleting Product</string>
    <string name="product_name_requires">Product Name required</string>
    <string name="filed_requires">please fill all filed form to insert an new product</string>
    <string name="price_requires">Product Price required</string>
    <string name="quantity_requires">Product Quantity required</string>
    <string name="supplier_name_requires">Supplier Name required</string>
    <string name="supplier_phone_requires">Supplier Phone required</string>
    <string name="delete">Delete</string>
    <string name="sale">Sale</string>
    <string name="edit">Edit</string>
</resources>
