<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.android.inventoryapp2.ViewActivity">

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                style="@style/ProductViewTitleTextStyle"
                android:text="@string/product_name" />
        </LinearLayout>

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                android:id="@+id/product_name_view_text"
                style="@style/ProductViewdetailStyle"
                android:layout_marginTop="@dimen/two" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ListItemLinearLayoutsection1">

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                style="@style/ProductViewTitleTextStyle"
                android:text="@string/product_price" />
        </LinearLayout>

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                android:id="@+id/product_price_view_text"
                style="@style/ProductViewdetailStyle"
                android:layout_marginTop="@dimen/one" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                style="@style/ProductViewTitleTextStyle"
                android:text="@string/product_quantity" />
        </LinearLayout>

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                android:id="@+id/product_quantity_view_text"
                style="@style/ProductViewdetailStyle" />

            <LinearLayout
                style="@style/ListItemLinearLayoutsection2"
                android:paddingLeft="@dimen/sixteen">

                <LinearLayout style="@style/ListItemLinearLayoutsection2">

                    <Button
                        android:id="@+id/increase_button"
                        android:layout_width="@dimen/thirty"
                        android:layout_height="@dimen/thirty"
                        android:layout_marginTop="@dimen/eight"
                        android:background="@color/colorAccent"
                        android:text="+"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout style="@style/ListItemLinearLayoutsection2">

                    <Button
                        android:id="@+id/decrease_button"
                        android:layout_width="@dimen/thirty"
                        android:layout_height="@dimen/thirty"
                        android:layout_marginTop="@dimen/eight"
                        android:background="@color/colorAccent"
                        android:text="-"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                style="@style/ProductViewTitleTextStyle"
                android:text="@string/product_supplier_name" />
        </LinearLayout>

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                android:id="@+id/product_supplier_name_view_text"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fortyeight"
                android:layout_marginTop="@dimen/eighteen"
                android:paddingRight="@dimen/sixteen" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                style="@style/ProductViewTitleTextStyle"
                android:text="@string/product_supplier_phone_number" />
        </LinearLayout>

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/product_supplier_phone_number_view_text"
                        style="@style/ProductViewdetailStyle"
                        android:layout_marginTop="@dimen/two" />
                </LinearLayout>

                <LinearLayout style="@style/ListItemLinearLayoutsection2">

                    <Button
                        android:id="@+id/phone_button"
                        android:layout_width="@dimen/thirtyfive"
                        android:layout_height="@dimen/forty"
                        android:layout_marginTop="@dimen/fourteen"
                        android:background="@drawable/button"
                        android:drawableLeft="@drawable/ic_phone_white"
                        android:focusable="false" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/ActivityViewLinearLayoutsection1"
        android:gravity="center">

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/delete"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
